# claude

./: .env.example  .gitignore  PITCH_DECK.md  PRODUCTION_READINESS_AUDIT.md  README-DEFI-BOT.md  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.claude/commands/: quick-review.md  review.md
.claude/scripts/: install-claude-skills.sh  setup-user-skills.sh
.claude/skills/code-review-expert/: SKILL.md
.claude/skills/common-pitfalls/: SKILL.md
.claude/skills/defi-mev-battletest/: SKILL.md
.claude/skills/defi-registry-manager/: SKILL.md
.claude/skills/error-logger/: SKILL.md
.claude/skills/full-review/: SKILL.md
.claude/skills/ralph-wiggum/: SKILL.md
.claude/skills/senior-devops/: SKILL.md
.claude/skills/senior-devops/references/: cicd_pipeline_guide.md  deployment_strategies.md  infrastructure_as_code.md
.claude/skills/senior-devops/scripts/: deployment_manager.py  pipeline_generator.py  terraform_scaffolder.py
.claude/skills/skill-auditor/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
.github/workflows/: ci.yml
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
client/src/components/: CreateDelegationForm.tsx  ErrorBoundary.tsx  Layout.tsx
client/src/config/: wagmi.ts
client/src/constants/: protocols.ts
client/src/hooks/: useApi.ts  useWebSocket.ts
client/src/pages/: Admin.tsx  ConnectWallet.tsx  Dashboard.tsx  Delegations.tsx  Opportunities.tsx  Settings.tsx  StrategyPerformance.tsx  Trades.tsx
client/src/store/: auth.ts
client/src/utils/: crypto.ts
examples/: basic-usage.ts
rust-core/: Cargo.toml
rust-core/crates/core/: Cargo.toml
rust-core/crates/core/src/: config.rs  errors.rs  lib.rs  opportunities.rs  pools.rs  quotes.rs  tokens.rs  types.rs
rust-core/crates/detector/: Cargo.toml
rust-core/crates/detector/src/: lib.rs  optimizer.rs  scanner.rs  strategies.rs
rust-core/crates/executor/: Cargo.toml
rust-core/crates/executor/src/: builder.rs  lib.rs  simulator.rs  submitter.rs
rust-core/crates/grpc-server/: Cargo.toml  build.rs
rust-core/crates/grpc-server/src/: conversions.rs  lib.rs  main.rs  server.rs  service.rs
rust-core/crates/price-feed/: Cargo.toml
rust-core/crates/price-feed/src/: aggregator.rs  feeds.rs  lib.rs  state.rs
rust-core/proto/: defi.proto
server/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
server/src/: index.ts  openapi.ts
server/src/config/: env.ts
server/src/contracts/: FlashLoanArbitrage.sol
server/src/db/: index.ts  schema.ts
server/src/middleware/: auth.ts  index.ts  rate-limit.ts  validation.ts
server/src/routes/: admin.ts  auth.ts  delegations.ts  docs.ts  executor.ts  index.ts  opportunities.ts  strategies.ts  trades.ts  wallet.ts
server/src/services/: arbitrage.ts  chainlink-oracle.ts  continuous-executor.ts  delegation.ts  encryption.ts  flash-loan.ts  gas-estimator.ts  gas-sponsor.ts  index.ts  logger.ts  metrics.ts  mev-protection.ts  position-sizing.ts  price-oracle.ts  redis.ts  risk-manager.ts  rpc-provider.ts  rust-core-client.ts  tracing.ts  trade-executor.ts  wallet.ts  websocket.ts
server/src/tests/: delegation.test.ts  encryption.test.ts  risk-manager.test.ts  trade-executor.test.ts
server/src/tests/integration/: api.test.ts  auth.test.ts  rpc-provider.test.ts
server/src/types/: express.d.ts
server/src/utils/: structured-logger.ts
shared/: schema.ts
src/: analyzer.ts  config.ts  http.ts  index.ts  logger.test.ts  logger.ts  types.ts  utils.ts
src/adapters/: curve.ts  index.ts  uniswap-v2.ts  uniswap-v3.ts
tests/: analyzer.test.ts  utils.test.ts
