[package]
name = "defi-core"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
parking_lot = { workspace = true }
